agregue una linea de codigo para una barra de navegacion

--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TP1 - 2025</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>HOLA</h1>
-    <p>mundo</p>
-    <p>esto es un texto de prueba</p>
+    <div class="wrapper">
+        <header>
+            <nav class = "navbar">
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="sobremi.html">Sobre mí</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>  
+        </header>
+    </div>  
 </body>
 </html>
