--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="wrapper">
         <header>
             <nav class = "navbar">
-                <ul>
+                <ul class="menu">
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="sobremi.html">Sobre mí</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
