modifique el html y el css

--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
     <div class="wrapper">
         <header>
             <nav class = "navbar">
+                <div class ="brand">
+                    <h2>Presentacion</h2>
+                </div>
                 <ul class="menu">
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="sobremi.html">Sobre mí</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
+                    <li class="active"><a href="#">Inicio</a></li>
+                    <li><a href="#">Sobre mí</a></li>
+                    <li><a href="#">Contacto</a></li>
                 </ul>
             </nav>  
         </header>
