modifique el html y le puse animaciones al menu

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <h2>Presentacion</h2>
                 </div>
                 <ul class="menu">
-                    <li class="active"><a href="#">Inicio</a></li>
+                    <li ><a class="active" href="#">Inicio</a></li>
                     <li><a href="#">Sobre mí</a></li>
                     <li><a href="#">Contacto</a></li>
                 </ul>
