modifique el html, le agregue una mini presentacion y una imagen

--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
                 </ul>
             </nav>  
         </header>
-    </div>  
+        <main class="main">
+            <div class="info">
+                <h1>Hola mi nombre es <span>Facundo Rojo</span></h1>
+                <p>Soy estudiante en la Tecnicatura Universitaria en Prgramacion en la UTN </p>
+                <a  download href="#">
+                    <button>Descargar CV</button>
+                </a>
+            </div>
+           <img src="./imagenes/foto.jpg" width="500px" height="500px" alt="Foto de Facundo Rojo">
+        </main>
+    </div>
 </body>
 </html>
