Modifique el css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <main class="main">
             <div class="info">
                 <h1>Hola mi nombre es <span>Facundo Rojo</span></h1>
-                <p>Soy estudiante en la Tecnicatura Universitaria en Prgramacion en la UTN </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto necessitatibus, dignissimos rem nemo, illum qui reiciendis non hic ab aut illo sequi? Quia dolorem unde excepturi voluptates expedita minima officiis.</p>
                 <a  download href="#">
                     <button>Descargar CV</button>
                 </a>
