--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h1>Hola mi nombre es <span>Facundo Rojo</span></h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto necessitatibus, dignissimos rem nemo, illum qui reiciendis non hic ab aut illo sequi? Quia dolorem unde excepturi voluptates expedita minima officiis.</p>
                 <a  download href="#">
-                    <button>Descargar CV</button>
+                    <button class="descargar-cv">Descargar CV</button>
                 </a>
             </div>
            <img src="./imagenes/foto.jpg" width="500px" height="500px" alt="Foto de Facundo Rojo">
