modifique el css para darle estilos a la foto

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <button class="descargar-cv">Descargar CV</button>
                 </a>
             </div>
-           <img src="./imagenes/foto.jpg" width="500px" height="500px" alt="Foto de Facundo Rojo">
+           <img src="./imagenes/foto.jpg" alt="Foto de Facundo Rojo">
         </main>
     </div>
 </body>
