--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 </div>
                 <ul class="menu">
                     <li ><a class="active" href="#">Inicio</a></li>
-                    <li><a href="#">Sobre mí</a></li>
+                    <li><a href="sobremi.html">Sobre mí</a></li>
                     <li><a href="#">Contacto</a></li>
                 </ul>
             </nav>  
