modifque el css para dar estilo a la segunda ventana

--- a/sobremi.html
+++ b/sobremi.html
@@ -9,10 +9,12 @@
 <body>
     <div class="about">
         <img src="./imagenes/foto.jpg" alt="Retrato de Facundo Rojo" class="about-image">
-    </div>
+    
     <div class="about-info">
         <h2>Sobre mi</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis corrupti ex, at cupiditate eaque cum quibusdam dolorum quod iure ut, aliquam error consectetur laborum dolores ullam nobis quam, atque rem!</p>
         <button class="descargar-cv">Leer mas</button>
     </div>
+</div>
 </body>
+</html>
