agregue el menu bar del inicio al html sobre mi tambien modificando el css

--- a/sobremi.html
+++ b/sobremi.html
@@ -7,7 +7,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <nav class = "navbar">
+            <div class ="brand">
+                <h2>Presentacion</h2>
+            </div>
+            <ul class="menu">
+                <li ><a href="index.html">Inicio</a></li>
+                <li><a class="active" href="sobremi.html">Sobre mí</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>  
+    </header>
     <div class="about">
+        
         <img src="./imagenes/foto.jpg" alt="Retrato de Facundo Rojo" class="about-image">
     
     <div class="about-info">
