modifique el css para darle mas estilo a la segunda pagina

--- a/sobremi.html
+++ b/sobremi.html
@@ -25,6 +25,7 @@
     
     <div class="about-info">
         <h2>Sobre mi</h2>
+        <div class="rayita"></div>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis corrupti ex, at cupiditate eaque cum quibusdam dolorum quod iure ut, aliquam error consectetur laborum dolores ullam nobis quam, atque rem!</p>
         <button class="descargar-cv">Leer mas</button>
     </div>
