--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul class="menu">
                     <li ><a class="active" href="#">Inicio</a></li>
                     <li><a href="sobremi.html">Sobre mí</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>  
         </header>
