--- a/sobremi.html
+++ b/sobremi.html
@@ -15,7 +15,7 @@
             <ul class="menu">
                 <li ><a href="index.html">Inicio</a></li>
                 <li><a class="active" href="sobremi.html">Sobre mí</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>  
     </header>
