modifique el html de contacto para sumarle una imagen y el link a mis redes y le agregue efectos modificando el css

--- a/contacto.html
+++ b/contacto.html
@@ -22,8 +22,10 @@
     <div class="contacto">
         <h2>Contacto</h2>
         <img src="./imagenes/foto.jpg" alt="Retrato de Facundo Rojo">
-        <h3> <link rel="link" href="https://www.instagram.com/facurojo35/">Mis Redes</h3>
+        <ul class="links">
+            <a href="https://www.instagram.com/facurojo35/">Instagram</a>
+            <a href="https://www.facebook.com/Facu.Rosso359/">Facebook</a>
+        </ul>
     </div>
-
 </body>
 </html>
