modifique el mensaje de presentacion de la pagina principal

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <main class="main">
             <div class="info">
                 <h1>Hola mi nombre es <span>Facundo Rojo</span></h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto necessitatibus, dignissimos rem nemo, illum qui reiciendis non hic ab aut illo sequi? Quia dolorem unde excepturi voluptates expedita minima officiis.</p>
+                <p>Estudio la tercnicatura en programacion en la UTN, me gusta jugar en la PC, y ver series.</p>
                 <a  download href="#">
                     <button class="descargar-cv">Descargar CV</button>
                 </a>
