modifique el mensaje de la pestaña Sobre mi

--- a/sobremi.html
+++ b/sobremi.html
@@ -26,7 +26,7 @@
     <div class="about-info">
         <h2>Sobre mi</h2>
         <div class="rayita"></div>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis corrupti ex, at cupiditate eaque cum quibusdam dolorum quod iure ut, aliquam error consectetur laborum dolores ullam nobis quam, atque rem!</p>
+        <p>Tengo 28 años, soy de la Rioja Argentina, actualmente Estudio en la utn La tecnicatura universitaria en programacion. Me gusta ver series y jugar en la pc. Tengo conocimientos en lenguajes de programacion como c, c++ y html</p>
         <button class="descargar-cv">Leer mas</button>
     </div>
 </div>
